--- a/app/views/config/_webhook.html.erb
+++ b/app/views/config/_webhook.html.erb
@@ -1,5 +1,5 @@
-<h2 class="mb-0">
-	<%= octicon "cloud-upload", height: 32, style: 'margin-right:0.25em;', class: 'dropcap'  %>
+<h2 class="mb-2">
+	<%= fa_icon "cloud-download", style: 'margin-right:0.25em;', class: 'dropcap'  %>
 	Webhook
 </h2>
 <p>Download of course materials can be triggered by using this webhook.</p>
