--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 				</div>
 				<% end %>
 
-				<div class="pull-right p-4">
+				<div class="pull-right p-4  navbar-expand">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
