--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -21,7 +21,7 @@
 
 	<div class="d-flex flex-column h-100">
 
-		<div id="navbar" class="navbar bg-dark navbar-dark flex-shrink-0">
+		<div id="navbar" class="navbar bg-dark navbar-dark navbar-expand-lg flex-shrink-0">
 			<%= render 'layouts/brand' %>
 			<%= yield :navbar_items %>
 			<%= render 'layouts/float_nav' %>
