--- a/app/views/config/_git.html.erb
+++ b/app/views/config/_git.html.erb
@@ -1,5 +1,5 @@
-<h2 class="mb-0">
-	<%= octicon "mark-github", height: 32, style: 'margin-right:0.25em;', class: 'dropcap'  %>
+<h2 class="mb-2">
+	<%= fa_icon "git-square", style: 'margin-right:0.25em;', class: 'dropcap'  %>
 	Git
 </h2>
 <p>Course materials will be downloaded from this git repository.</p>
