--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -3,12 +3,12 @@
 //    -webkit-box-shadow: 0px 0px 15px rgba(140, 152, 164, 0.125);
 //    -moz-box-shadow: 0px 0px 15px rgba(140, 152, 164, 0.125);
 //    box-shadow: 0px 0px 15px rgba(140, 152, 164, 0.125);
-	border:0;
+//    border:0;
 }
 
 #timeline .card
 {
-    border:0;
+//    border:0;
     box-shadow:none;
     border-radius:0;
 }
