--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,61 +1,48 @@
 <% if current_user.admin? %>
 
 <%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path, class: 'dropdown-item' %>
 <div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path, class: 'dropdown-item' %>
-<div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, discuss_submits_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-th"></i> Student overview'.html_safe, students_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, submits_path, class: 'dropdown-item' %>
 <% if Settings.hands_allow %>
-<div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path, class: 'dropdown-item' %>
 <% end %>
 <div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path, class: 'dropdown-item' %>
 
 
 
 <% elsif current_user.head? %>
 
 <%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path, class: 'dropdown-item' %>
-<% if current_user.groups.any? or current_user.schedules.any? %>
 <div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, discuss_submits_path, class: 'dropdown-item' %>
-<% end %>
+<%= link_to '<i class="glyphicon glyphicon-th"></i> Student overview'.html_safe, students_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, submits_path, class: 'dropdown-item' %>
 <% if Settings.hands_allow %>
-<div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands'.html_safe, hands_path, class: 'dropdown-item' %>
 <% end %>
 <div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path, class: 'dropdown-item' %>
 
 
 
 <% elsif current_user.assistant? %>
 
 <% if Settings.hands_allow %>
-<%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path, class: 'dropdown-item' %>
-<div class="dropdown-divider"></div>
+<%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands'.html_safe, hands_path, class: 'dropdown-item' %>
 <% end %>
 <% if !Schedule.exists? or current_user.groups.any? or current_user.schedules.any? %>
-<%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, discuss_submits_path, class: 'dropdown-item' %>
-<div class="dropdown-divider"></div>
+<%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, submits_path, class: 'dropdown-item' %>
 <% end %>
 <%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path, class: 'dropdown-item' %>
 
 
 
 <% else %>
-<%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path, class: 'dropdown-item' %>
 
 
 
 <% end%>
+
+
+<%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path, class: 'dropdown-item' %>
