--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -47,7 +47,7 @@
 
 		<td>
 			<% if user.submits.last and user.submits.last.grade %>
-			<%= grade_button_html(0, nil, user.submits.last.grade.any_final_grade, true) %>
+			<%= link_to user.submits.last.grade.any_final_grade, "#", data: { toggle: "modal", target: "#grade-modal", submit:user.submits.last.id }, class: "btn" %>
 			<% end %>
 		</td>
 	</tr>
@@ -56,33 +56,3 @@
 	<% end %>
 
 </table>
-
-
-<!-- Large modal -->
-
-<div id="user-modal" class="modal bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div id="modal-header" class="modal-header">
-				<h5 class="modal-title"></h5>
-			</div>
-			<div id="modal-body" class="modal-body">
-				<p style="text-align:center; font-size:xx-large"><%= fa_icon 'cog', class:'fa-spin' %></p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
-			</div>
-		</div>
-	</div>
-</div>
-
-<script>
-	$('#user-modal').on('show.bs.modal', function (e) {
-		$('#modal-header').html("");
-		$('#modal-body').html('<p style="text-align:center; font-size:xx-large"><%= fa_icon "cog", class:"fa-spin" %></p>');
-		
-		elt = $(e.relatedTarget);
-		$.ajax('/user/' + elt.data("user"));
-	})
-</script>
