--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,13 +1,12 @@
 <%= render partial: 'tabs' %>
 <%= render partial: 'table', locals: { users: @users, psets: @psets } %>
+<%= render partial: "user_modal" %>
+<%= render partial: "grade_modal" %>
 
 <script type="text/javascript" charset="utf-8">
-
 $(function()
 {
 	$('.best_in_place').best_in_place()
-	// $(".bar").sparkline('html', { type: 'bar', chartRangeMax: 8, barWidth: 8 });
 	$('[data-toggle="tooltip"]').tooltip()
 })
-
 </script>
