--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,12 +2,11 @@
 
 <%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path, class: 'dropdown-item' %>
-<%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path, class: 'dropdown-item' %>
 <div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-th"></i> Student overview'.html_safe, students_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-th"></i> Overview'.html_safe, students_path, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, submits_path, class: 'dropdown-item' %>
 <% if Settings.hands_allow %>
-<%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands'.html_safe, hands_path, class: 'dropdown-item' %>
 <% end %>
 <div class="dropdown-divider"></div>
 
@@ -15,9 +14,7 @@
 
 <% elsif current_user.head? %>
 
-<%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path, class: 'dropdown-item' %>
-<div class="dropdown-divider"></div>
-<%= link_to '<i class="glyphicon glyphicon-th"></i> Student overview'.html_safe, students_path, class: 'dropdown-item' %>
+<%= link_to '<i class="glyphicon glyphicon-th"></i> Overview'.html_safe, students_path, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, submits_path, class: 'dropdown-item' %>
 <% if Settings.hands_allow %>
 <%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands'.html_safe, hands_path, class: 'dropdown-item' %>
