--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -14,10 +14,12 @@
 			<% if logged_in? && @schedule %>
 			<p class="nav-text">
 				<span id="schedule_name"><%= @schedule.name %></span>
+				<% if current_user.schedule.self_service %>
 				<span class="pull-right">
 					<%= link_to fa_icon('chevron-circle-left', style: 'color:#aaa').html_safe, profile_prev_path, method: :post, remote: true %>
 					<%= link_to fa_icon('chevron-circle-right', style: 'color:#aaa').html_safe, profile_next_path, method: :post, remote: true %>
 				</span>
+				<% end %>
 			</p>
 
 			<ul id="schedule" class="nav">
