--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -22,8 +22,8 @@
 #timeline .card
 {
 	margin-bottom:30px;
-    background-color:$light;
-    border:0;
+//    background-color:$light;
+//    border:0;
     box-shadow:none;
 }
 
@@ -52,13 +52,13 @@
     margin-bottom:0;
 }
 
-#timeline .list-group
-{
-    border: 2px solid #f8f9fa;
-}
-
-#timeline .list-group-item
-{
-    border-color: #f8f9fa;
-    border-bottom-width: 2px;
-}
+//#timeline .list-group
+//{
+//    border: 2px solid #f8f9fa;
+//}
+//
+//#timeline .list-group-item
+//{
+//    border-color: #f8f9fa;
+//    border-bottom-width: 2px;
+//}
