--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -92,12 +92,12 @@
 
 #sidebar p.nav-text, #sidebar a.dropdown-toggle {
     margin:0;
-    color:#cdcdcd;
+    color:#a5a5a5;
 }
 
 #sidebar ul.nav > li > ul.nav
 {
-    psadding-left:.5em;
+    Spadding-left:.5em;
 }
 
 #icon-nav
@@ -105,7 +105,6 @@
     position:-webkit-sticky;
     top:0;
     z-index:1000;
-//    background-color:white;
 }
 
 #ama-nav .dropdown-menu
