fix all hands/ask logic

--- a/app/views/hands/_form.html.erb
+++ b/app/views/hands/_form.html.erb
@@ -1,6 +1,6 @@
-<p><textarea class="form-control" rows="4" placeholder="Anything to report about this student?" name="note"></textarea></p>
+<p><textarea class="form-control" rows="4" placeholder="Always report if students seem to be behind on schedule, or if they appear to have a hard time grasping." name="note"></textarea></p>
 		
-<p>
+<!--p>
 	<div class="btn-group btn-group-justified" data-toggle="buttons">
 		<label class="btn btn-default">
 			<input required type="radio" name="progress" value="✈️" id="option1" autocomplete="off"> ✈️ ahead
@@ -23,4 +23,4 @@
 			<input type="radio" name="evaluation" value="😕" id="option3" autocomplete="off"> 😕 tough sell
 		</label>
 	</div>
-</p>
+</p-->
