--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
 			
 			<div id="sidebar" class="col-md-3 p-3 p-md-4 d-flex flex-column navbar-dark">
 				<%= render 'layouts/brand'%>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 				<%= render 'layouts/sidebar' %>
 			</div>
 			
