--- a/app/views/hands/show.html.erb
+++ b/app/views/hands/show.html.erb
@@ -1,3 +1,5 @@
+<div class="my-3">
+
 <h4>
 <% if @hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
 <%= @hand.user.name %><% if @hand.user.group %> (<%= @hand.user.group.name %>)<% end %>
@@ -12,9 +14,9 @@
 
 <% if @hand.assist.blank? %>
 
-<p><%= button_to("I'll take this one", {controller: 'hands', action: 'dib', which: @hand.id}, method: :post, class: 'btn btn-primary btn-block') %></p>
+<p><%= button_to("I'll take the question", {controller: 'hands', action: 'dib', which: @hand.id}, method: :post, class: 'btn btn-primary btn-block') %></p>
 			
-<p><%= button_to('Student not found, remove.', {controller: 'hands', action: 'done', id: @hand.id, success: false}, method: :post, class: 'btn btn-default btn-block', data: { confirm: 'Sure to delete?' })%></p>
+<p><%= button_to('Student has left, remove question', {controller: 'hands', action: 'done', id: @hand.id, success: false}, method: :post, class: 'btn btn-default btn-block', data: { confirm: 'Sure to delete?' })%></p>
 
 <p><%= button_to("Back to list", {controller: 'hands', action: 'index'}, method: :get, class: 'btn btn-default btn-block' ) %></p>
 
@@ -24,13 +26,13 @@
 
 <%= render partial: 'form' %>
 
-<button type="submit" class="btn btn-primary btn-block">I'm done with this one</button>
+<button type="submit" class="btn btn-primary btn-block">Mark as done</button>
 
 <hr>
 
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-<%= link_to('Student not found, remove', {controller: 'hands', action: 'done', id: @hand.id, success: false}, method: :post, class: 'btn btn-sm btn-warning', data: { confirm: 'Sure to delete?' })%>
-<%= link_to('Put back in list', { controller: 'hands', action: 'helpline', id: @hand.id }, method: :post, class: 'btn btn-sm btn-danger', data: { confirm: 'Are you sure that someone is available for extra help?' })%>
+<div class="btn-group d-flex" role="group">
+<%= link_to('Student not found, remove', {controller: 'hands', action: 'done', id: @hand.id, success: false}, method: :post, class: 'btn btn-sm btn-warning flex-fill', data: { confirm: 'Sure to delete?' })%>
+<%= link_to('Put back in list', { controller: 'hands', action: 'helpline', id: @hand.id }, method: :post, class: 'btn btn-sm btn-danger flex-fill', data: { confirm: 'Are you sure that someone is available for extra help?' })%>
 </div>
 
 <p></p>
@@ -38,3 +40,5 @@
 <% end %>
 
 <% end %>
+
+</div>
