--- a/app/views/hands/student.html.erb
+++ b/app/views/hands/student.html.erb
@@ -1,3 +1,5 @@
+<div class="my-3">
+
 <h4>
 	<%= @user.name %><% if @user.group %> <%= @user.group.name %><% end %><br>
 	<small>was seen on this site <%= @user.last_seen_at ? time_ago_in_words(@user.last_seen_at) : 'never??' %> ago</small>
@@ -14,6 +16,8 @@
 
 <%= render partial: 'form' %>
 		
-<p><button type="submit" class="btn btn-primary btn-block">I've said "hi" to this student</button></p>
+<p><button type="submit" class="btn btn-primary btn-block">Mark as done</button></p>
 
 <% end %>
+
+</div>
