grading and hands done

--- a/app/views/application/_grade_modal.html.erb
+++ b/app/views/application/_grade_modal.html.erb
@@ -22,6 +22,6 @@
 
 		// load new data
 		elt = $(e.relatedTarget);
-		$('#grade-modal-body').load('/submits/' + elt.data("submit") + '/grade');
+		$('#grade-modal-body').load('/grades/' + elt.data("submit"));
 	})
 </script>
