--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -51,9 +51,6 @@
 <%= simple_markdown(@grade.comments) %>
 
 
-<% if @grade.published? %>
-<%= link_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: discuss_submits_path), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-primary' %>
-<% end %>
 <% if current_user.senior? && @submit.grade %>
-<%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-secondary' %>
+<%= link_to "Re-open this grade", grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-secondary' %>
 <% end %>
