--- a/app/views/timeline/_staff.html.erb
+++ b/app/views/timeline/_staff.html.erb
@@ -1,3 +1,5 @@
+<% if current_user.schedule %>
+
 <% if @new_students.any? %>
 <div class="card">
 	<div class="card-body">
@@ -83,3 +85,5 @@
 </div>
 <% end %>
 <%= render partial: "user_modal" %>
+
+<% end %>
