small sidebar layout fix

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -95,9 +95,9 @@
     color:#a5a5a5;
 }
 
-#sidebar ul.nav > li > ul.nav
+#sidebar ul.nav > li > ul.nav > li > ul.nav
 {
-    Spadding-left:.5em;
+    padding-left:1em;
 }
 
 #icon-nav
