--- a/app/views/profile/_edit.html.erb
+++ b/app/views/profile/_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag '/profile/save', class:'profisle-form' do |f| %>
+<%= form_tag '/profile/save', class:'profile-form' do |f| %>
 
 <div class="form-group">
 	<label for="user_name">First and last name</label>
