--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 				</div>
 				<% end %>
 
-				<div class="pull-right p-4  navbar-expand">
+				<div class="pull-right pt-4 pr-4 navbar-expand">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
