--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="/images/minor.png" />
 </head>
 
-<body>
+<body class="<%= controller.controller_name %>">
 
 	<div class="container-fluid" style="max-width:1366px">
 		<div class="row" style="">
